--- a/pages/detail/detail.wxml
+++ b/pages/detail/detail.wxml
@@ -76,11 +76,11 @@
         <view>返回主页</view>
     </view>
     <view class="showImg" catchtouchstart='' wx:if="{{isShowImg}}">
-        <view wx:if="{{tempFilePath}}" class="iconfont icon-guanbi" bindtap="closeImg"></view>
+        <view wx:if="{{tempFilePath}}" class="iconfont icon-guanbi {{iphoneX?'icon-guanbi_x':''}}" bindtap="closeImg"></view>
         <view class="showImg_wrap">
-            <image class="showImg_img" src="{{tempFilePath}}"></image>
+            <image bindtap="lookImg" mode="aspectFit	" class="{{iphoneX?'showImg_img':'showImg_img1'}}" src="{{tempFilePath}}"></image>
         </view>
-        <view wx:if="{{tempFilePath}}" class="showImg_save" catchtap="btnClick">保存后分享朋友圈</view>
+        <view wx:if="{{tempFilePath}}" class="showImg_save {{iphoneX?'showImg_save1':''}}" catchtap="btnClick">保存后分享朋友圈</view>
     </view>
     <view class="canvas-img">
         <canvas canvas-id="canvasShare" style="width: 100%; height: 1206rpx"></canvas>
