--- a/src/assets/recompose_ele_ui.css
+++ b/src/assets/recompose_ele_ui.css
@@ -47,3 +47,6 @@
 .el-upload-list--picture-card .el-upload-list__item .el-icon-close, .el-upload-list--picture-card .el-upload-list__item:hover .el-upload-list__item-status-label {
   display: block;
 }
+/*.el-upload-list--picture-card .el-upload-list__item-actions, .el-upload-list__item.is-success .el-upload-list__item-status-label {
+  display: none;
+}*/
