解决图片上传的问题

--- a/src/assets/reset.css
+++ b/src/assets/reset.css
@@ -100,11 +100,11 @@ body {
 }
 @font-face {
   font-family: 'iconfont';  /* project id 810881 */
-  src: url('//at.alicdn.com/t/font_810881_u8kmyferrn8.eot');
-  src: url('//at.alicdn.com/t/font_810881_u8kmyferrn8.eot?#iefix') format('embedded-opentype'),
-  url('//at.alicdn.com/t/font_810881_u8kmyferrn8.woff') format('woff'),
-  url('//at.alicdn.com/t/font_810881_u8kmyferrn8.ttf') format('truetype'),
-  url('//at.alicdn.com/t/font_810881_u8kmyferrn8.svg#iconfont') format('svg');
+  src: url('//at.alicdn.com/t/font_810881_l8d1csytxvi.eot');
+  src: url('//at.alicdn.com/t/font_810881_l8d1csytxvi.eot?#iefix') format('embedded-opentype'),
+  url('//at.alicdn.com/t/font_810881_l8d1csytxvi.woff') format('woff'),
+  url('//at.alicdn.com/t/font_810881_l8d1csytxvi.ttf') format('truetype'),
+  url('//at.alicdn.com/t/font_810881_l8d1csytxvi.svg#iconfont') format('svg');
 }
 .iconfont {
   font-family:"iconfont" !important;
@@ -116,4 +116,5 @@ body {
 .icon-fanhui:before { content: "\e600"; }
 
 .icon-gengduo:before { content: "\e601"; }
+.icon-guanbi:before {  content:"\e624";  }
 
