--- a/pages/specialExhibition/specialExhibition.wxml
+++ b/pages/specialExhibition/specialExhibition.wxml
@@ -1,6 +1,9 @@
 <view>
     <image class="banner" src="./baner_ad.png"></image>
     <view style="height: 8rpx"></view>
+    <view class="apeci_txt">
+        2018年，马克思诞辰200周年，中国改革开放40周年。这两个纪念节点的“汇合”，让中国社会有了回望与前瞻的历史契机。改革开放40年来，关于社会主义建设、关于党的建设、关于中国和世界的关系，每一个问题的展开和推进，都始终贯穿着实践检验真理的原则。
+    </view>
     <view class="list" wx:for="{{list}}" wx:key="{{index}}" bindtap="goToDetailsPage" data-money-code="{{item.moneyCode}}">
         <image mode="aspectFit" src="{{item.url1}}"></image>
         <view class="list-right">
