--- a/pages/specialExhibition/specialExhibition.wxss
+++ b/pages/specialExhibition/specialExhibition.wxss
@@ -3,3 +3,11 @@
     width: 750rpx;
     height: 260rpx;
 }
+.apeci_txt {
+    width: 682rpx;
+    margin-left: 34rpx;
+    font-size: 30rpx;
+    color: rgb(51,51,51);
+    text-indent: 2em;
+    line-height: 50rpx;
+}
