--- a/src/assets/mask.css
+++ b/src/assets/mask.css
@@ -21,17 +21,33 @@
 
 .res-title {
   display: flex;
-  font-size: 0.3rem;
   width: 100%;
   justify-content: center;
-  height: 0.76rem;
-  line-height: 0.76rem;
+  line-height: 0.98rem;
   position: relative;
-  border-bottom: 0.01rem solid #EEF0F2;
-  color: #C8A258;
-  margin-bottom: 0.11rem;
-}
 
+  font-size: 0.36rem;
+  letter-spacing: 0.04rem;
+  color: #000000;
+}
+.res-title h2{
+  font-weight: bold;
+}
+.res-title .icon-guanbi {
+  font-size: 0.34rem;
+  font-weight: bold;
+  width: 0.59rem;
+  height: 0.59rem;
+  border-radius: 0.3rem;
+  box-sizing: border-box;
+  padding-left: 0.12rem;
+  padding-top: 0.02rem;
+  line-height: 0.59rem;
+  background-color: #f4ba43;
+  position: absolute;
+  right: 0.27rem;
+  top: -0.7rem;
+}
 .res-title img {
   width: 0.24rem;
   height: 0.24rem;
@@ -42,41 +58,50 @@
 }
 
 .list {
-  font-size: 0.3rem;
+  font-size: 0.28rem;
   display: flex;
   justify-content: space-between;
-  line-height: 0.75rem;
+  line-height: 0.56rem;
+  align-items: center;
   margin: 0 0.26rem;
   color: #000;
-  font-weight: 600;
-  font-family: PingFangSC-Regular;
-  padding-top: 0.14rem;
+  margin-bottom: 0.34rem;
 }
 
 .mandatory {
-  margin-left: 0.11rem;
-  color: #C8A258;
+  line-height: 0.56rem;
+  color: #F5C665;
 }
 
 .list-left {
-  min-width: 1.5rem;
+  min-width: 1.55rem;
   display: flex;
+  align-items: center;
   justify-content: space-between;
+  text-align: justify;
+}
+.list-left-text {
+  letter-spacing: 0.1rem;
+}
+.list-left-text1 {
+  letter-spacing: 0.23rem;
 }
 
 .list-upload {
-  font-size: 0.3rem;
+  font-size: 0.28rem;
+  line-height: 1;
   display: flex;
-  margin: 0 0.26rem;
-  line-height: 1.2rem;
+  margin: 0.55rem 0.26rem 0.25rem;
+  align-items: center;
   color: #000;
 }
 
 .list input {
-  width: 4.17rem;
+  border-radius: 0;
+  width: 5rem;
   height: 0.35rem;
-  padding: 0.2rem 0.3rem;
-  border-radius: 0.08rem;
-  border: 0.01rem solid #d3d5d6;
-  color: #b7b7b7;
+  box-sizing: border-box;
+  border-bottom: 0.01rem solid #959595;
+  color: #000;
+  margin-bottom: 0.05rem;
 }
