--- a/src/assets/reset.css
+++ b/src/assets/reset.css
@@ -100,12 +100,12 @@ body {
 }
 @font-face {
   font-family: 'iconfont';  /* project id 810881 */
-  src: url('//at.alicdn.com/t/font_810881_q8i9q05pnco.eot');
-  src: url('//at.alicdn.com/t/font_810881_q8i9q05pnco.eot?#iefix') format('embedded-opentype'),
-  url('//at.alicdn.com/t/font_810881_q8i9q05pnco.woff2') format('woff2'),
-  url('//at.alicdn.com/t/font_810881_q8i9q05pnco.woff') format('woff'),
-  url('//at.alicdn.com/t/font_810881_q8i9q05pnco.ttf') format('truetype'),
-  url('//at.alicdn.com/t/font_810881_q8i9q05pnco.svg#iconfont') format('svg');
+  src: url('//at.alicdn.com/t/font_810881_eiod2kuqddf.eot');
+  src: url('//at.alicdn.com/t/font_810881_eiod2kuqddf.eot?#iefix') format('embedded-opentype'),
+  url('//at.alicdn.com/t/font_810881_eiod2kuqddf.woff2') format('woff2'),
+  url('//at.alicdn.com/t/font_810881_eiod2kuqddf.woff') format('woff'),
+  url('//at.alicdn.com/t/font_810881_eiod2kuqddf.ttf') format('truetype'),
+  url('//at.alicdn.com/t/font_810881_eiod2kuqddf.svg#iconfont') format('svg');
 }
 .iconfont {
   font-family:"iconfont" !important;
@@ -117,6 +117,9 @@ body {
 .icon-fanhui:before { content: "\e600"; }
 .icon-icon_delete:before {
   content:"\e61e";
+}
+.icon-add:before {
+  content: "\e603";
 }
 .icon-xiala:before {
   content:"\e65b";
