--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -57,11 +57,13 @@ page {
 .banner-img {
     width: 750rpx;
     height: 100%;
+    display: block;
 }
 .advertising {
     width: 750rpx;
     height: 114rpx;
     margin-top: 6rpx;
+    display: block;
     /*margin-bottom: 8rpx;*/
     /* background-color: #bfa; */
 }
@@ -140,4 +142,52 @@ page {
     font-size: 30rpx;
     text-align: center;
     margin-top: 150rpx;
+}
+
+.ad1 {
+    position: fixed;
+    bottom: 100rpx;
+    right: 30rpx;
+    width: 80rpx;
+    height: 80rpx;
+    border-radius: 80rpx;
+    background-color: #bfa;
+    font-size: 22rpx;
+    color: #000;
+    text-align: center;
+    line-height: 80rpx;
+}
+
+.ad2 {
+    position: fixed;
+    bottom: 0rpx;
+    left: 0;
+    width: 100%;
+    height: 80rpx;
+    background-color: #baf;
+    text-align: center;
+    line-height: 80rpx;
+    font-size: 30rpx;
+}
+.ad3 {
+    position: fixed;
+    bottom: 0rpx;
+    top: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.ad3 image {
+    display: block;
+    width: 100%;
+    height: 100%;
+    background-color: #abf;
+}
+.close_ad {
+    position: absolute;
+    top: 30rpx;
+    right: 30rpx;
+    font-size: 25rpx;
+    text-align: center;
+    line-height: 50rpx;
 }
