--- a/pages/detail/detail.wxml
+++ b/pages/detail/detail.wxml
@@ -61,7 +61,7 @@
             </button>
             <view class="flex friends-circle" bindtap="shareFriend">
                 <image class="footer-img3" src="../../images/pageImg/friends-circle.png"></image>
-                <view>朋友圈</view>
+                <view>炫耀一下</view>
             </view>
         </view>
     </view>
@@ -74,7 +74,7 @@
         <view class="showImg_wrap">
             <image bindtap="lookImg" mode="widthFix" class="{{iphoneX?'showImg_img':'showImg_img1'}}" src="{{tempFilePath}}"></image>
         </view>
-        <view wx:if="{{tempFilePath}}" class="showImg_save {{iphoneX?'showImg_save1':''}}" catchtap="btnClick">保存后分享朋友圈</view>
+        <view wx:if="{{tempFilePath}}" class="showImg_save {{iphoneX?'showImg_save1':''}}" catchtap="btnClick">保存</view>
     </view>
     <view class="canvas-img">
         <canvas canvas-id="canvasShare" style="width: 100%; height: 1206rpx"></canvas>
