--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -8,23 +8,40 @@ page {
     margin-bottom: 22rpx;
 }
 .section_hot {
-    width: 260rpx;
-    height: 50rpx;
-    border-radius:8rpx;
-    -boxshadow:0px 0px 21rpx rgba(198,160,86, 0.2);
-    border: 1rpx solid #C6A056;
-    font-size:24rpx;
-    font-family:PingFangSC-Regular;
-    color: #C6A056;
+    /*background: #FFFFFF;*/
+    border-radius: 56rpx;
+    box-shadow: -6rpx -6rpx 20rpx 0px #FFFFFF, 6rpx 6rpx 20rpx 0 #C5D6F1;
+    background-image: linear-gradient(127deg, rgba(255, 255, 255, 1), rgba(191, 162, 103, 1));
+    font-size: 28rpx;
+    font-family: SourceHanSansSC-Regular, SourceHanSansSC;
+    color: #BFA267;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     position: relative;
 }
 .section_hot picker {
-    width: 100%;
-    height: 100%;
+    width: 209rpx;
+    height: 56rpx;
+    border-radius: 56rpx;
+    border: none;
+    background-color: #fff;
+    cursor: pointer;
+    line-height:1.8;
+    /*   border: 5px solid transparent; */
+    box-sizing:border-box;
+    font-weight: 300;
+    padding: 4rpx;
+    background-clip: content-box,padding-box;
+}
+.picker_xiala {
+    font-size: 20rpx;
+    position: absolute;
+    right: 20rpx;
 }
 .section_hot .picker {
     line-height:50rpx;
-    margin-left: 15rpx;
+    margin-left: 20rpx;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
