--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,39 +1,61 @@
 page {
     background-color: #fff;
 }
-.select-wrap {
-    display: flex;
-    margin-left: 37rpx;
-    margin-top: 22rpx;
-    margin-bottom: 22rpx;
-}
-.section_hot {
-    /*background: #FFFFFF;*/
-    border-radius: 56rpx;
-    box-shadow: -6rpx -6rpx 20rpx 0px #FFFFFF, 6rpx 6rpx 20rpx 0 #C5D6F1;
-    background-image: linear-gradient(127deg, rgba(255, 255, 255, 1), rgba(191, 162, 103, 1));
-    font-size: 28rpx;
-    font-family: SourceHanSansSC-Regular, SourceHanSansSC;
-    color: #BFA267;
+
+.common_wrap {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    box-shadow: -6rpx -6rpx 20rpx 0px #FFFFFF, 6rpx 6rpx 20rpx 0 #C5D6F1;
+    background-image: linear-gradient(127deg, rgba(255, 255, 255, 1), rgba(191, 162, 103, 1));
+}
+
+.select-wrap {
+    display: flex;
+    margin-left: 37rpx;
+    margin-top: 30rpx;
+    margin-bottom: 30rpx;
+}
+
+.section_hot {
+    border-radius: 56rpx;
+    font-size: 28rpx;
+    color: #BFA267;
     position: relative;
 }
 .section_hot picker {
     width: 209rpx;
     height: 56rpx;
     border-radius: 56rpx;
-    border: none;
-    background-color: #fff;
-    cursor: pointer;
-    line-height:1.8;
-    /*   border: 5px solid transparent; */
-    box-sizing:border-box;
-    font-weight: 300;
     padding: 4rpx;
+}
+
+.common_content {
+    background-color: #fff;
+    box-sizing: border-box;
     background-clip: content-box,padding-box;
 }
+
+.select-search-wrap {
+    border-radius: 28rpx;
+    width: 56rpx;
+    height: 56rpx;
+    justify-content: center;
+    margin-left: 160rpx;
+}
+
+.icon-sousuo1 {
+    width: 48rpx;
+    height: 48rpx;
+    line-height: 48rpx;
+    font-size: 26rpx;
+    color: #BFA267;
+    border-radius: 48rpx;
+    font-weight: 600;
+    text-align: center;
+    justify-content: center;
+}
+
 .picker_xiala {
     font-size: 20rpx;
     position: absolute;
@@ -53,62 +75,89 @@ page {
     right: 14rpx;
     top: 20rpx;
 }
-.select-search-wrap {
-    margin-left: 40rpx;
-    height: 50rpx;
-    padding-left: 20rpx;
-    padding-right: 35rpx;
-}
-.select-search {
-    width: 32rpx;
-    height: 32rpx;
-    margin-top: 10rpx;
-}
 .select-left {
-    margin-left: 65rpx;
+    margin-left: 56rpx;
 }
 .banner {
     width: 750rpx;
-    height: 341rpx;
+    height: 345rpx;
 }
 .banner-img {
-    width: 750rpx;
-    height: 100%;
+    margin: 0 auto;
+    width: 690rpx;
+    height: 345rpx;
+    box-shadow: 6rpx 6rpx 15rpx 0rpx #C5D6F1, -6rpx -6rpx 15rpx 0rpx #FFFFFF;
+    border-radius: 10rpx;
+    background-color: #fff;
     display: block;
 }
 .advertising {
-    width: 750rpx;
-    height: 114rpx;
-    margin-top: 6rpx;
+    width: 690rpx;
+    height: 184rpx;
     display: block;
-    /*margin-bottom: 8rpx;*/
-    /* background-color: #bfa; */
+    margin: 15rpx auto 0;
 }
-.list {
+
+.subject_title {
+    font-size: 36rpx;
+    color: #333;
+    padding-left: 20rpx;
+    border-left: 4rpx solid #BFA267;
+    line-height: 1;
+    margin: 40rpx 0 0 30rpx;
+}
+
+.scroll_view {
+    width: 750rpx;
+}
+
+.subject_list {
+    padding: 32rpx 0 40rpx 30rpx;
+}
+
+.subject_img {
+    width: 236rpx;
+    height: 280rpx;
+    background: #D8D8D8;
+    box-shadow: 6rpx 6rpx 20rpx 0rpx #C5D6F1, -6rpx -6rpx 20rpx 0rpx #FFFFFF;
+    border-radius: 10rpx;
+}
+
+.gold_item_wrap {
+    width: 690rpx;
+    height: 194rpx;
+    border-radius: 10rpx;
+    margin: 0 30rpx 24rpx;
+    justify-content: center;
+    align-items: center;
+}
+
+.gold_item {
     display: flex;
-    /*height: 162rpx;*/
-    margin: 0 34rpx 0 34rpx;
-    padding: 23rpx 4rpx 23rpx 0;
-    border-bottom: 1rpx solid #EFEFEF;
+    width: 682rpx;
+    height: 186rpx;
+    border-radius: 10rpx;
+    align-items: center;
 }
-.list image {
+.gold_item image {
     width: 220rpx;
     height: 116rpx;
-    margin-right: 21rpx;
+    margin-right: 20rpx;
+    margin-left: 20rpx;
 }
 .list-right {
-    width: 436rpx;
+    max-width: 340rpx;
 }
 
 .list-right-top {
-    line-height: 40rpx;
-    color: rgba(51,51,51,1);
-    height: 77rpx;
-    font-size: 30rpx;
+    line-height: 34rpx;
+    font-family: Helvetica;
+    color: #BFA267;
+    font-size: 28rpx;
     overflow: hidden;
     text-overflow: ellipsis;
     display: -webkit-box;
-    -webkit-line-clamp: 2;
+    -webkit-line-clamp: 3;
     -webkit-box-orient: vertical;
 }
 .list-right-bottom {
